package dbproto;

import "common.proto";

message cs_task_save
{
    optional commonproto.task_list_t task_list = 1;
}

message sc_task_save
{

}

message cs_task_buffer_update
{
    required uint32 task_id = 1;   
    required uint32 pro_id = 2;
    required string buffer = 3;
}

message sc_task_buffer_update
{

}

message cs_task_del
{
    required uint32 task_id = 1;   
}

message sc_task_del
{

}
